--- a/essai_cours-19-10-18/essai-js-dev.html
+++ b/essai_cours-19-10-18/essai-js-dev.html
@@ -12,7 +12,7 @@
 <title> TEST JS </title> 
 
 <body>
-
+<!--BODY-->
 <input class="sync" type="text"></input>
 <input class="sync" type="text"></input>
 <input class="sync" type="text"></input>
