--- a/essai_cours-19-10-18/essai-js-dev.html
+++ b/essai_cours-19-10-18/essai-js-dev.html
@@ -9,7 +9,7 @@
 
 <html>
   <script src="https://unpkg.com/vue"></script>
-<title> TEST JS TEST </title> 
+<title> teeeeeeeeeest </title> 
 
 <body>
 <!--BODY-->
